--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -132,26 +132,26 @@
 				<div class="form-group col-sm">
 					<label>Senha</label>
 					<input type="password" class="form-control"
-          [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}"
-          formControlName="senha"
+          [ngClass]="{'is-invalid': f.password.errors && f.password.touched}"
+          formControlName="password"
           />
-          <div *ngIf="f.senha.errors?.required && f.senha.touched" class="invalid-feedback">
+          <div *ngIf="f.password.errors?.required && f.password.touched" class="invalid-feedback">
             Senha é obrigatorio
           </div>
-          <div *ngIf="f.senha.errors?.minlength && f.senha.touched" class="invalid-feedback">
+          <div *ngIf="f.password.errors?.minlength && f.password.touched" class="invalid-feedback">
             Senha deve ter no mínimo 6 caracteres
           </div>
 				</div>
 				<div class="form-group col-sm">
 					<label>Confirmar Senha</label>
 					<input type="password" class="form-control"
-          [ngClass]="{'is-invalid': f.confirmeSenha.errors && f.confirmeSenha.touched}"
-          formControlName="confirmeSenha"
+          [ngClass]="{'is-invalid': f.confirmePassword.errors && f.confirmePassword.touched}"
+          formControlName="confirmePassword"
           />
-          <div *ngIf="f.confirmeSenha.errors?.required && f.confirmeSenha.touched" class="invalid-feedback">
+          <div *ngIf="f.confirmePassword.errors?.required && f.confirmePassword.touched" class="invalid-feedback">
             Confirmar Senha é obrigatorio
           </div>
-          <div *ngIf="f.confirmeSenha.errors?.mustMatch && f.confirmeSenha.touched" class="invalid-feedback">
+          <div *ngIf="f.confirmePassword.errors?.mustMatch && f.confirmePassword.touched" class="invalid-feedback">
             Repetir a Senha é obrigatorio
           </div>
 				</div>
