--- a/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
+++ b/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
@@ -9,7 +9,7 @@
 
 	<div class="col-md-6">
 
-		<form class="p-1" [formGroup]="form">
+		<form class="p-1" [formGroup]="form" (ngSubmit)="register()">
       <div class="pb-3 d-block d-md-none">
         <h3 class="border-bottom">Cadastro de Usuário</h3>
       </div>
@@ -58,24 +58,24 @@
         <div class="form-group col-sm-6">
           <label>Senha:</label>
           <input class="form-control"
-          [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}"
-          type="password" formControlName="senha" placeholder="Digite uma Senha" />
-          <div *ngIf="f.senha.errors?.required && f.senha.touched" class="invalid-feedback">
+          [ngClass]="{'is-invalid': f.password.errors && f.password.touched}"
+          type="password" formControlName="password" placeholder="Digite uma Senha" />
+          <div *ngIf="f.password.errors?.required && f.password.touched" class="invalid-feedback">
             Senha é obrigatorio
           </div>
-          <div *ngIf="f.senha.errors?.minlength && f.senha.touched" class="invalid-feedback">
+          <div *ngIf="f.password.errors?.minlength && f.password.touched" class="invalid-feedback">
             Senha deve ter no mínimo 6 caracteres
           </div>
         </div>
         <div class="form-group col-sm-6">
           <label>Confirmar Senha:</label>
           <input class="form-control"
-          [ngClass]="{'is-invalid': f.confirmeSenha.errors && f.confirmeSenha.touched}"
-          type="password" formControlName="confirmeSenha" placeholder="Confirme a Senha" />
-          <div *ngIf="f.confirmeSenha.errors?.required && f.confirmeSenha.touched" class="invalid-feedback">
+          [ngClass]="{'is-invalid': f.confirmePassword.errors && f.confirmePassword.touched}"
+          type="password" formControlName="confirmePassword" placeholder="Confirme a Senha" />
+          <div *ngIf="f.confirmePassword.errors?.required && f.confirmePassword.touched" class="invalid-feedback">
             Confirmar Senha é obrigatorio
           </div>
-          <div *ngIf="f.confirmeSenha.errors?.mustMatch && f.confirmeSenha.touched" class="invalid-feedback">
+          <div *ngIf="f.confirmePassword.errors?.mustMatch && f.confirmePassword.touched" class="invalid-feedback">
             Repetir a Senha é obrigatorio
           </div>
         </div>
@@ -88,7 +88,7 @@
       </div>
       <div class="row g-3">
         <div class="row g-3 col-12">
-          <button class="btn btn-lg btn-success btn-block px-5">
+          <button [disabled]="!form.valid" class="btn btn-lg btn-success btn-block px-5" type="submit">
             Registar
           </button>
         </div>
