--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <app-titulo [titulo] = "'Perfil'"></app-titulo>
 
 <div class="card rounded shadow-sm">
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
 	<div class="row p-3">
 		<div class="col-lg-3 pt-1">
 			<div class="card mb-3">
@@ -14,23 +14,22 @@
 					</a>
 				</div>
 				<div class="card-body">
-					<div class="h4 text-center mb-3">@UserName</div>
-					<div class="h7 text-bold pb-1"><b>Nome:</b> Miracles Lee Cross</div>
+					<div class="h4 text-center mb-3">@{{f.userName.value}}</div>
+					<div class="h7 text-bold pb-1"><b>Nome:</b> {{f.primeiroNome.value + ' ' + f.ultimoNome.value}} </div>
 					<div class="h7">
-						Developer of web applications, JavaScript, PHP, Java, Python, Ruby, Java, Node.js,
-						etc.
+						{{f.descricao.value}}
 					</div>
 				</div>
 				<ul class="list-group list-group-flush">
 					<li class="list-group-item">
 						<div class="row">
 							<div class="col-6 text-center border-right">
-								<div class="h5">1342</div>
-								<div class="h6 text-muted">Eventos Ministrados</div>
+								<div class="h5">0</div>
+								<div class="h6 text-muted">Meus Eventos Criados</div>
 							</div>
 							<div class="col-6 text-center">
-								<div class="h5">1342</div>
-								<div class="h6 text-muted">Eventos Participados</div>
+								<div class="h5">0</div>
+								<div class="h6 text-muted">Eventos como Participante</div>
 							</div>
 						</div>
 					</li>
@@ -49,15 +48,14 @@
           [ngClass]="{'is-invalid': f.titulo.errors && f.titulo.touched}"
           formControlName="titulo"
           >
-						<option value=""></option>
-						<option value="0">Não Quero</option>
-						<option value="Senhorita">Tecnólogo(a)</option>
-						<option value="Senhorita">Bacharel</option>
-						<option value="Senhorita">Especialista</option>
-						<option value="Senhorita">Pós Graduado(a)</option>
-						<option value="Senhorita">Mestre</option>
-						<option value="Senhorita">Doutor(a)</option>
-						<option value="Senhorita">Pós Doc</option>
+						<option value="NaoInformado">Não Quero</option>
+						<option value="Tecnologo">Tecnólogo(a)</option>
+						<option value="Bacharel">Bacharel</option>
+						<option value="Especialista">Especialista</option>
+						<option value="PosGraduado">Pós Graduado(a)</option>
+						<option value="Mestrado">Mestre</option>
+						<option value="Doutorado">Doutor(a)</option>
+						<option value="PosDoutorado">Pós Doc</option>
 					</select>
           <div *ngIf="f.titulo.errors?.required && f.titulo.touched" class="invalid-feedback">
             Titulo é obrigatório
@@ -98,10 +96,10 @@
 				<div class="form-group col-sm-4">
 					<label>Telefone</label>
 					<input type="text" class="form-control"
-          [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched}"
-          formControlName="telefone"
+          [ngClass]="{'is-invalid': f.phoneNumber.errors && f.phoneNumber.touched}"
+          formControlName="phoneNumber"
           />
-          <div *ngIf="f.telefone.errors?.required && f.telefone.touched" class="invalid-feedback">
+          <div *ngIf="f.phoneNumber.errors?.required && f.phoneNumber.touched" class="invalid-feedback">
             Telefone é obrigatório
           </div>
 				</div>
@@ -111,7 +109,7 @@
           [ngClass]="{'is-invalid': f.funcao.errors && f.funcao.touched}"
           formControlName="funcao"
           >
-						<option value=""></option>
+						<option value="NaoInformado">Não Informado</option>
 						<option value="Participante">Participante</option>
 						<option value="Palestrante">Palestrante</option>
 					</select>
@@ -119,10 +117,11 @@
             Função é obrigatório
           </div>
 				</div>
-				<form-group class="col-12">
+				<div class="form-group col-12">
 					<label>Descrição</label>
-					<input type="text" class="form-control" />
-				</form-group>
+					<input type="text" class="form-control"
+          formControlName="descricao"/>
+				</div>
 			</div>
 			<div>
 				<h3 class="pt-3 border-bottom">Mudar Senha</h3>
@@ -135,11 +134,9 @@
           [ngClass]="{'is-invalid': f.password.errors && f.password.touched}"
           formControlName="password"
           />
-          <div *ngIf="f.password.errors?.required && f.password.touched" class="invalid-feedback">
-            Senha é obrigatorio
-          </div>
-          <div *ngIf="f.password.errors?.minlength && f.password.touched" class="invalid-feedback">
-            Senha deve ter no mínimo 6 caracteres
+          <div *ngIf="f.password.errors && f.password.touched" class="invalid-feedback">
+            <div *ngIf="f.password.errors?.required">Senha é obrigatorio</div>
+            <div *ngIf="f.password.errors?.minlength">Senha deve ter no mínimo 6 caracteres</div>
           </div>
 				</div>
 				<div class="form-group col-sm">
@@ -148,11 +145,9 @@
           [ngClass]="{'is-invalid': f.confirmePassword.errors && f.confirmePassword.touched}"
           formControlName="confirmePassword"
           />
-          <div *ngIf="f.confirmePassword.errors?.required && f.confirmePassword.touched" class="invalid-feedback">
-            Confirmar Senha é obrigatorio
-          </div>
-          <div *ngIf="f.confirmePassword.errors?.mustMatch && f.confirmePassword.touched" class="invalid-feedback">
-            Repetir a Senha é obrigatorio
+          <div *ngIf="f.confirmePassword.errors && f.confirmePassword.touched" class="invalid-feedback">
+            <div *ngIf="f.confirmePassword.errors?.required">Confirmar Senha é obrigatorio</div>
+            <div *ngIf="f.confirmePassword.errors?.mustMatch">Repetir a Senha é obrigatorio</div>
           </div>
 				</div>
 			</div>
@@ -163,7 +158,7 @@
 			<button (click)="resetForm($event)" class="btn btn-outline-secondary mr-auto border">
 				Cancelar Alteração
 			</button>
-			<button (click)="onSubmit()" class="btn btn-success">
+			<button type="submit" class="btn btn-success">
 				<!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
 				Salvar Alteração
 			</button>
