--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -12,7 +12,7 @@
           type="text"
           class="form-control"
           placeholder="Buscar por Tema e Local"
-          [(ngModel)] = "filtroLista"
+          (input)="filtrarEventos($event.target)"
         >
       </div>
     </div>
@@ -44,7 +44,7 @@
       </tr>
     </thead>
     <tbody *ngIf="eventos && eventos.length">
-        <tr *ngFor="let evento of eventosFiltrados" (click)="detalheEvento(evento.id)" style="cursor: pointer;">
+        <tr *ngFor="let evento of eventos" (click)="detalheEvento(evento.id)" style="cursor: pointer;">
           <td class="d-none d-md-table-cell">
             <img [collapse]="!exibirImagem"
                 [isAnimated]="true"
@@ -74,6 +74,25 @@
       </tr>
     </tfoot>
   </table>
+
+  <div class="d-flex justify-content-center">
+    <pagination
+      [boundaryLinks]="true"
+
+      [totalItems]="pagination.totalItems"
+      [itemsPerPage]="pagination.itemsPerPage"
+      [(ngModel)]="pagination.currentPage"
+      (pageChanged)="pageChanged($event)"
+
+      pageBtnClass="btn"
+      previousText="&lsaquo;"
+      nextText="&rsaquo;"
+      firstText="&laquo;"
+      lastText="&raquo;">
+    </pagination>
+  </div>
+
+
 </div>
 
 <!-- {{eventos | json}} -->
