--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -97,7 +97,7 @@
     <div class="card rounded shadow-sm mt-3" *ngIf="modoEditar">
       <div class="p-3">
         <div class="d-flex border-bottom">
-          <h2 class="mr-auto">
+          <h2 class="me-auto">
             Lotes do Evento
           </h2>
           <h2>
@@ -185,16 +185,16 @@
   <div class="card rounded shadow-sm mt-3" *ngIf="modoEditar">
     <div class="p-3">
       <div class="d-flex border-bottom">
-        <h2 class="mr-auto">
+        <h2 class="me-auto">
           Redes Sociais do Evento
         </h2>
         <h2>
-          <i class="fas fa-share-square"></i>
+          <i class="fas fa-share-square me-2"></i>
         </h2>
       </div>
+      <app-redesSociais [eventoId]="eventoId"></app-redesSociais>
     </div>
   </div>
-
 
 </div>
 <div class="col-md-4" *ngIf="modoEditar">
