--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -83,11 +83,11 @@
         </div>
         <div class="card-footer">
           <div class="d-flex">
-            <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm()">
+            <button class="btn btn-outline-secondary me-auto border" (click)="resetForm()">
               Cancelar Alteração
             </button>
             <button class="btn btn-success" [disabled]="!form.valid" (click)="salvarEvento()">
-              <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
+              <!-- <span class="spinner-border spinner-border-sm me-1"></span> -->
               Salvar Evento
             </button>
           </div>
@@ -172,7 +172,7 @@
     </div>
     <div class="card-footer">
       <div class="d-flex">
-        <button class="btn btn-outline-secondary mr-auto border">
+        <button class="btn btn-outline-secondary me-auto border">
           Cancelar Alteração
         </button>
         <button [disabled]="!form.controls.lotes.valid" (click)="salvarLotes()" class="btn btn-success">
