--- a/Front/ProEventos-App/src/app/components/redesSociais/redesSociais.component.html
+++ b/Front/ProEventos-App/src/app/components/redesSociais/redesSociais.component.html
@@ -1,5 +1,5 @@
 <p>Clique em Rede Social para adicionar e preencher novas Redes Sociais</p>
-<div class="form-row p-1">
+<div class="row p-1">
   <div [formGroup]="formRS" class="col">
     <div formArrayName="redesSociais" *ngFor="let redeSocial of redesSociais.controls; let i=index">
       <fieldset [formGroupName]="i" class="form-group">
@@ -42,7 +42,7 @@
 
 <div class="card-footer">
   <div class="d-flex">
-    <button class="btn btn-outline-secondary mr-auto border">
+    <button class="btn btn-outline-secondary me-auto border">
       Cancelar Alteração
     </button>
     <button [disabled]="!formRS.controls.redesSociais.valid" (click)="salvarRedesSociais()" class="btn btn-success">
